--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "joi": "^17.6.0",
+    "js-flex-validator": "^1.0.8",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
