--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "cdbreact": "^1.5.1",
     "formik": "^2.2.9",
     "joi": "^17.6.0",
     "react": "^18.1.0",
