--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
     "tippy.js": "^6.2.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
