--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
-    "react-hook-form": "^7.31.3",
     "react-phone-number-input": "^3.1.52",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -26,8 +25,7 @@
     "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
     "tippy.js": "^6.2.5",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
