fixed navbar + created hero session page

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@headlessui/react": "^1.6.5",
     "@hookform/resolvers": "^2.8.10",
     "@mui/material": "^5.8.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -24,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
+    "tailwindcss-filters": "^3.0.0",
     "tippy.js": "^6.2.5",
     "web-vitals": "^2.1.4"
   },
