--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
+    "serve": "^13.0.2",
     "tippy.js": "^6.2.5",
     "web-vitals": "^2.1.4"
   },
