--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
-    "react-phone-number-input": "^3.1.52",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.2.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
